2010-05-08 Homer Xing <homer.xing@gmail.com>

    * Fix a bug: all repository give no response on Ubuntu hardy.
    * Print message if python-distutils-extra is missing.
    * Fix a bug: exception when remove files in sources.list.d.
    * Fix a bug: nautilus-script-manager failed.
    * Fix a bug: name 'URLError' is not defined.

2010-05-07 CHEN Yangyang <skabyy@gmail.com>

    * The splash window will not always on top anymore
    * Fix a bug in "hide quick setup" check button

2010-05-07 HAN Haofu <gtxx3600@gmail.com>

	* Fix a bug: "CPU Cache information is incorrect in some kernel version"

2010-05-07 Homer Xing <homer.xing@gmail.com>

    * Optimize source code architecture. Provide a generic architecture for software install/remove.
    * Improve TeXLive installation. Do not download 1.4G iso any more. Reduce disk space cost.
    * Fix bug: Custom linux kernel cannot be removed
    * Fix bug: APT.remove failed if any package is not installed
    * Hide "Not used Linux kernels" label, when there is no unused Linux kernel.

2010-05-06 CHEN Yangyang <skabyy@gmail.com>

    * Fix a bug that the "clean up pane" will crash if /var/cache/ailurus is not exists

2010-05-03 SHANG Yuanchun <idealities@gmail.com>

    * Gray buttons if APT cache is empty. 
      Gray buttons if Ailurus cache is empty.
      Make folder statistic more precise. 

2010-05-03 Homer Xing <homer.xing@gmail.com>

    * Improve memory information. Display "GB" if memory is more than 1 GB.

2010-05-03 HAN Haofu <gtxx3600@gmail.com>

    * Display CPU Level 1 & Level 2 cache information in "Information pane"

2010-05-03 MA Yue <velly.empire@gmail.com>

    * Add a new page in System Setting pane, in order to configure Firefox
    * Fix a bug: "enable/disable sudo" does not work

2010-05-01 HUANG Wei <wei.kukey@gmail.com>

    * Add web page url: Upgrade Fedora using an application called "PreUpgrade"

2010-05-01 Homer Xing <homer.xing@gmail.com>
